--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
 </head>
 <body>
     <h1>About me</h1>
-    <h2>Smaller Header, continues to h6</h2>
-    <a href="https://www.bbc.com/">Link Here!</a>
   
-    <p>Am I a block level element or am I inline</p>
-    <p>Am I a block level element or am I inline</p>
-    <button>Click the button</button>
-  
+    <p>Hi, I am Stella. I like to read romance and fantansy novels. I hate playing Roblox with my sister and cousins, especially when they play Adopt Me.</p>
+    <h2>Hobbies</h2>
     <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
+      <li>Watching Netflix</li>
+      <li>Annoying people</li>
+      <li>Playing basketball</li>
     </ul>
+    <h2>Top 3 Books</h2>
     <ol>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
+      <li>Throne of Glass</li>
+      <li>Amnesia Experiment</li>
+      <li>Keeper of the Lost Cities</li>
     </ol>
-  
-    <img src="capy.jpg" alt="Glacier in ocean" />
+    <a href="https://www.barnesandnoble.com/w/throne-of-glass-sarah-j-maas/1141902141?ean=9781639730957">Link to the Throne of Glass!</a>
+    <img src="" alt="" />
 </body>
 </html>
