--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <li>Keeper of the Lost Cities</li>
     </ol>
     <a href="https://www.barnesandnoble.com/w/throne-of-glass-sarah-j-maas/1141902141?ean=9781639730957">Link to the Throne of Glass!</a>
-    <img src="" alt="" />
+    <img src="meme.jpg" alt="meme" />
 </body>
 </html>
