--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
 </head>
 <body>
     <h1>About me</h1>
   
-    <p>Hi, I am Stella. I like to read romance and fantansy novels. I hate playing Roblox with my sister and cousins, especially when they play Adopt Me.</p>
+    <p class="Hi">Hi, I am Stella. I like to read romance and fantansy novels. I hate playing Roblox with my sister and cousins, especially when they play Adopt Me.</p>
     <h2>Top 3 Books</h2>
     <ol>
       <li>Throne of Glass</li>
