--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>About me</h1>
-  
+
     <p class="Hi">Hi, I am Stella. I like to read romance and fantansy novels. I hate playing Roblox with my sister and cousins, especially when they play Adopt Me.</p>
     <h2>Top 3 Books</h2>
     <ol>
@@ -15,7 +15,7 @@
       <li>Amnesia Experiment</li>
       <li>Keeper of the Lost Cities</li>
     </ol>
-    <a href="https://www.barnesandnoble.com/w/throne-of-glass-sarah-j-maas/1141902141?ean=9781639730957">Link to the Throne of Glass!</a>
+    <a class = "link" href="https://www.barnesandnoble.com/w/throne-of-glass-sarah-j-maas/1141902141?ean=9781639730957">Link to the Throne of Glass!</a>
     <h2>Hobbies</h2>
     <ul>
       <li>Watching Netflix</li>
